--- a/midi-webrtc.html
+++ b/midi-webrtc.html
@@ -2,38 +2,63 @@
 <html>
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>WebRTC p2p data</title>
     <script src="js/adapter.js"></script>
-    <script src="js/jquery-2.0.0.js"></script>
-    <script src="js/bootstrap.js"></script>
-    <link href="css/bootstrap.css" rel="stylesheet">
-    <link href="css/bootstrap-responsive.css" rel="stylesheet">
+    <script
+      src="https://code.jquery.com/jquery-1.12.4.min.js"
+      integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ="
+      crossorigin="anonymous">
+    </script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+	    integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+	    crossorigin="anonymous">
+    </script>
+
+    <script src="https://www.gstatic.com/firebasejs/3.6.6/firebase.js"></script>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <!-- Optional theme -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     <link href="css/serverless-webrtc-bootstrap.css" rel="stylesheet">
 </head>
 <body>
-<a href="https://github.com/cjb/serverless-webrtc/"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png" alt="Fork me on GitHub"></a>
 <div class="container">
-  <div class="span4">
-    <Video id="localVideo">
+  <div class="row">
+    <div class="col-md-6">
+      <Video id="localVideo">
+    </div>
+    <div class="col-md-6">
+      <Video id="remoteVideo">
+    </div>
   </div>
-  <div class="span4">
-    <Video id="remoteVideo">
+  <div class="row">
+    <div class="col-md-6">
+      <fieldset class="well">
+	<p class="head muted">
+	  Serverless WebRTC version 5.
+	</p>
+	<div class="text-info" id="chatlog" style="height:350px; overflow:auto;">
+	</div>
+      </fieldset>
+      <form class="form-inline" onSubmit="return sendMessage()" action="">
+	<input type="text" id="messageTextBox" placeholder="Type your message here">
+	<button type="submit" id="sendMessageBtn" class="btn">Send message</button>
+      </form>
+      <input type="file" id="fileBtn">
+    </div>
+    <div class="col-md-6">
+      <fieldset class="well">
+	<p class="head muted">
+	  Incoming MIDI log.
+	</p>
+	<div class="text-info" id="midilog" style="height:350px; overflow:auto;">
+	</div>
+      </fieldset>
+    </div>
   </div>
-  <div class="span4">
-    <fieldset class="well">
-      <p class="head muted">
-	Serverless WebRTC version 5.
-      </p>
-      <div class="text-info" id="chatlog" style="height:350px; overflow:auto;">
-      </div>
-    </fieldset>
-    <form class="form-inline" onSubmit="return sendMessage()" action="">
-      <input type="text" id="messageTextBox" placeholder="Type your message here">
-      <button type="submit" id="sendMessageBtn" class="btn">Send message</button>
-    </form>
-    <input type="file" id="fileBtn">
-  </div>
-  <div>
+
+  <div class="row">
     <div class="form-group">
       <label for="midi-inputs">Midi inputs</label>
 	  <select id="midi-inputs" class="form-control"></select>
@@ -43,94 +68,94 @@
       <select id="midi-outputs" class="form-control"></select>
     </div>
   </div>
-  <div class="span4">
-    <fieldset class="well">
-      <p class="head muted">
-	Incoming MIDI log.
-      </p>
-      <div class="text-info" id="midilog" style="height:350px; overflow:auto;">
+
+  <div class="modal fade" id="showLocalOffer" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" hidden>
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+	<div class="modal-header">
+	  <h3 id="myModalLabel">Send your local offer to someone else</h3>
+	</div>
+	<div class="modal-body">
+	  Here's your "offer" -- it tells someone else how to connect to you.  Send the whole thing to them, for example in an instant message or e-mail.
+	<br/>
+	<textarea class="input-large" id="localOffer" name="localOffer" rows="10" cols="100"></textarea>
+	</div>
+	<div class="modal-footer">
+	  <button class="btn btn-primary" id="offerSentBtn" data-dismiss="modal" aria-hidden="true">Okay, I sent it.</button>
+	</div>	
       </div>
-    </fieldset>
-  </div>
-  
-  <div class="modal" id="showLocalOffer" data-backdrop="static" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" hidden>
-    <div class="modal-header">
-      <h3 id="myModalLabel">Send your local offer to someone else</h3>
-    </div>
-    <div class="modal-body">
-      Here's your "offer" -- it tells someone else how to connect to you.  Send the whole thing to them, for example in an instant message or e-mail.
-    <br/>
-    <textarea class="input-large" id="localOffer" name="localOffer" rows="10" cols="100"></textarea>
-    </div>
-    <div class="modal-footer">
-      <button class="btn btn-primary" id="offerSentBtn" data-dismiss="modal" aria-hidden="true">Okay, I sent it.</button>
     </div>
   </div>
+
   
-  <div class="modal" id="showLocalAnswer" data-backdrop="static" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" hidden>
-    <div class="modal-header">
-      <h3 id="myModalLabel">Send your local answer to someone else</h3>
+  <div class="modal fade" id="getRemoteOffer" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" hidden>
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+	<div class="modal-header">
+	  <h3 id="myModalLabel">Paste the "offer" you received</h3>
+	</div>
+	<div class="modal-body">
+	  The person who created the room will send you an "offer" string -- paste it here.
+	<br/>
+	<textarea class="input-large" id="remoteOffer" name="remoteOffer" rows="10" cols="100"></textarea>
+	</div>
+	<div class="modal-footer">
+	  <button class="btn btn-primary" id="offerRecdBtn" data-dismiss="modal" aria-hidden="true">Okay, I pasted it.</button>
+	</div>	
+      </div>
     </div>
-    <div class="modal-body">
-      Here's your "answer" -- it tells someone else how to connect to you.  Send the whole thing to them, for example in an instant message or e-mail.
-    <br/>
-    <textarea class="input-large" id="localAnswer" name="localAnswer" rows="10" cols="100"></textarea>
-    </div>
-    <div class="modal-footer">
-      <button class="btn btn-primary" id="answerSentBtn" data-dismiss="modal" aria-hidden="true">Okay, I sent it.</button>
-    </div>
+
   </div>
   
-  <div class="modal" id="getRemoteOffer" data-backdrop="static" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" hidden>
-    <div class="modal-header">
-      <h3 id="myModalLabel">Paste the "offer" you received</h3>
-    </div>
-    <div class="modal-body">
-      The person who created the room will send you an "offer" string -- paste it here.
-    <br/>
-    <textarea class="input-large" id="remoteOffer" name="remoteOffer" rows="10" cols="100"></textarea>
-    </div>
-    <div class="modal-footer">
-      <button class="btn btn-primary" id="offerRecdBtn" data-dismiss="modal" aria-hidden="true">Okay, I pasted it.</button>
+  <div class="modal fade" id="getRemoteAnswer" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" hidden>
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+	<div class="modal-header">
+	  <h3 id="myModalLabel">Paste the "answer" you received</h3>
+	</div>
+	<div class="modal-body">
+	  Now paste in the "answer" that was sent back to you.
+	<br/>
+	<textarea class="input-large" id="remoteAnswer" name="remoteAnswer" rows="10" cols="100"></textarea>
+	</div>
+	<div class="modal-footer">
+	  <button class="btn btn-primary" id="answerRecdBtn" data-dismiss="modal" aria-hidden="true">Okay, I pasted it.</button>
+	</div>	
+      </div>
     </div>
   </div>
   
-  <div class="modal" id="getRemoteAnswer" data-backdrop="static" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" hidden>
-    <div class="modal-header">
-      <h3 id="myModalLabel">Paste the "answer" you received</h3>
-    </div>
-    <div class="modal-body">
-      Now paste in the "answer" that was sent back to you.
-    <br/>
-    <textarea class="input-large" id="remoteAnswer" name="remoteAnswer" rows="10" cols="100"></textarea>
-    </div>
-    <div class="modal-footer">
-      <button class="btn btn-primary" id="answerRecdBtn" data-dismiss="modal" aria-hidden="true">Okay, I pasted it.</button>
-    </div>
-  </div>
-  
-  <div class="modal" id="waitForConnection" data-backdrop="static" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" hidden>
-    <div class="modal-header">
-      <h3 id="myModalLabel">Waiting for connection</h3>
-    </div>
-    <div class="modal-body">
-      This dialog will disappear when a connection is made.
-    </div>
-    <div class="spinner" align="center">
-      <img src="img/spinner.gif"></img>
+  <div class="modal" id="waitForConnection" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" hidden>
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+	<div class="modal-header">
+	  <h3 id="myModalLabel">Waiting for connection</h3>
+	</div>
+	<div class="modal-body">
+	  This dialog will disappear when a connection is made.
+	</div>
+	<div class="spinner" align="center">
+	  <img src="img/spinner.gif"></img>
+	</div>	
+      </div>
     </div>
   </div>
   
-  <div class="modal" id="createOrJoin" data-backdrop="static" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    <div class="modal-header">
-      <h3 id="myModalLabel">Create or join a room?</h3>
-    </div>
-    <div class="modal-footer">
-      <button class="btn" id="joinBtn" data-dismiss="modal" aria-hidden="true">Join</button>
-      <button class="btn btn-primary" id="createBtn" data-dismiss="modal" aria-hidden="true">Create</button>
+  <div class="modal" id="createOrJoin" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+	<div class="modal-header">
+	  <h3 id="myModalLabel">Create or join a room?</h3>
+	</div>
+	<div class="modal-footer">
+	  <button class="btn" id="joinBtn" data-dismiss="modal" aria-hidden="true">Join</button>
+	  <button class="btn btn-primary" id="createBtn" data-dismiss="modal" aria-hidden="true">Create</button>
+	</div>	
+      </div>
     </div>
   </div>
 </div>
+  
 <script src="js/serverless-webrtc.js"></script>
 <script src="js/file-transfer.js"></script>
 </body>
