--- a/midi-webrtc.html
+++ b/midi-webrtc.html
@@ -78,7 +78,7 @@
 	<div class="modal-body">
 	  Here's your "offer" -- it tells someone else how to connect to you.  Send the whole thing to them, for example in an instant message or e-mail.
 	<br/>
-	<textarea class="input-large" id="localOffer" name="localOffer" rows="10" cols="100"></textarea>
+	<textarea class="form-control" id="localOffer" name="localOffer" rows="10" cols="100"></textarea>
 	</div>
 	<div class="modal-footer">
 	  <button class="btn btn-primary" id="offerSentBtn" data-dismiss="modal" aria-hidden="true">Okay, I sent it.</button>
@@ -97,7 +97,7 @@
 	<div class="modal-body">
 	  The person who created the room will send you an "offer" string -- paste it here.
 	<br/>
-	<textarea class="input-large" id="remoteOffer" name="remoteOffer" rows="10" cols="100"></textarea>
+	<textarea class="form-control" id="remoteOffer" name="remoteOffer" rows="10" cols="100"></textarea>
 	</div>
 	<div class="modal-footer">
 	  <button class="btn btn-primary" id="offerRecdBtn" data-dismiss="modal" aria-hidden="true">Okay, I pasted it.</button>
@@ -107,23 +107,7 @@
 
   </div>
   
-  <div class="modal fade" id="getRemoteAnswer" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" hidden>
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-	<div class="modal-header">
-	  <h3 id="myModalLabel">Paste the "answer" you received</h3>
-	</div>
-	<div class="modal-body">
-	  Now paste in the "answer" that was sent back to you.
-	<br/>
-	<textarea class="input-large" id="remoteAnswer" name="remoteAnswer" rows="10" cols="100"></textarea>
-	</div>
-	<div class="modal-footer">
-	  <button class="btn btn-primary" id="answerRecdBtn" data-dismiss="modal" aria-hidden="true">Okay, I pasted it.</button>
-	</div>	
-      </div>
-    </div>
-  </div>
+
   
   <div class="modal" id="waitForConnection" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" hidden>
     <div class="modal-dialog" role="document">
