--- a/midi-webrtc.html
+++ b/midi-webrtc.html
@@ -86,6 +86,24 @@
       </div>
     </div>
   </div>
+  
+  <div class="modal fade" id="showLocalAnswer" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" hidden>
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+	<div class="modal-header">
+	  <h3 id="myModalLabel">Send your local answer to someone else</h3>
+	</div>
+	<div class="modal-body">
+	  Here's your "answer" -- it tells someone else how to connect to you.  Send the whole thing to them, for example in an instant message or e-mail.
+	<br/>
+	<textarea class="form-control" id="localAnswer" name="localAnswer" rows="10" cols="100"></textarea>
+	</div>
+	<div class="modal-footer">
+	  <button class="btn btn-primary" id="answerSentBtn" data-dismiss="modal" aria-hidden="true">Okay, I sent it.</button>
+	</div>
+      </div>
+    </div>
+  </div>
 
   
   <div class="modal fade" id="getRemoteOffer" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" hidden>
