--- a/midi-webrtc.html
+++ b/midi-webrtc.html
@@ -125,6 +125,23 @@
 
   </div>
   
+   <div class="modal fade" id="getRemoteAnswer" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" hidden>
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+	<div class="modal-header">
+	  <h3 id="myModalLabel">Paste the "answer" you received</h3>
+	</div>
+	<div class="modal-body">
+	  Now paste in the "answer" that was sent back to you.
+	<br/>
+	<textarea class="form-control" id="remoteAnswer" name="remoteAnswer" rows="10" cols="100"></textarea>
+	</div>
+	<div class="modal-footer">
+	  <button class="btn btn-primary" id="answerRecdBtn" data-dismiss="modal" aria-hidden="true">Okay, I pasted it.</button>
+	</div>	
+      </div>
+    </div>
+  </div>
 
   
   <div class="modal" id="waitForConnection" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" hidden>
