--- a/midi-webrtc.html
+++ b/midi-webrtc.html
@@ -225,9 +225,9 @@
   </div>
 
   
-<script src="js/serverless-webrtc.js"></script>
-<script src="js/userHandling.js"></script>
-<script src="js/SpEvent.js"></script>
-<!--<script src="js/file-transfer.js"></script>-->
+  <script src="js/serverless-webrtc.js"></script>
+  <script src="js/userHandling.js"></script>
+  <script src="js/SpEvent.js"></script>
+  <script src="js/signaling-functions.js"></script>
 </body>
 </html>
