--- a/midi-webrtc.html
+++ b/midi-webrtc.html
@@ -87,11 +87,11 @@
     <div id="main">
       <div class="row">
 				<div class="col-sm-6">
-					<video id="localVideo" width="240" controls></video>
-					<button id="hangUp" class="btn btn-sm btn-danger" onclick="hangUp()">Hang up</button>
+					<video id="localVideo" height="120" width="260" autoplay muted controls></video>
+					<button type="button" id="hangUp" class="btn btn-sm btn-danger" onclick="hangUp()">Hang up</button>
 				</div>
 				<div class="col-sm-6">
-					<video id="remoteVideo" controls></video>
+					<video id="remoteVideo" controls muted></video>
 				</div>
       </div>
       <div class="row">
