fixed video width

--- a/midi-webrtc.html
+++ b/midi-webrtc.html
@@ -86,7 +86,7 @@
     <div id="main">
       <div class="row">
 				<div class="col-sm-6">
-					<video id="localVideo" class="localVideo" with="240" autoplay muted controls></video>
+					<video id="localVideo" class="localVideo" width="240" autoplay muted controls></video>
 					<button type="button" id="hangUp" class="btn btn-sm btn-danger" onclick="hangUp()">Hang up</button>
 				</div>
 				<div class="col-sm-6">
