More video element

--- a/midi-webrtc.html
+++ b/midi-webrtc.html
@@ -86,11 +86,11 @@
     <div id="main">
       <div class="row">
 				<div class="col-sm-6">
-					<video id="localVideo" class="localVideo" width="240" autoplay muted controls></video>
-					<button type="button" id="hangUp" class="btn btn-sm btn-danger" onclick="hangUp()">Hang up</button>
+					<video id="remoteVideo" width="400" autoplay controls muted></video>
 				</div>
 				<div class="col-sm-6">
-					<video id="remoteVideo" autoplay controls muted></video>
+					<video id="localVideo" class="localVideo" width="240" autoplay muted controls></video>
+					<button type="button" id="hangUp" class="btn btn-sm btn-danger" onclick="hangUp()">Hang up</button>
 				</div>
       </div>
       <div class="row">
