--- a/midi-webrtc.html
+++ b/midi-webrtc.html
@@ -86,10 +86,10 @@
     <div id="main">
       <div class="row">
 				<div class="col-sm-6">
-					<video id="remoteVideo" width="400" autoplay controls muted></video>
+					<video id="remoteVideo" width="100%" autoplay controls muted></video>
 				</div>
 				<div class="col-sm-6">
-					<video id="localVideo" class="localVideo" width="240" autoplay muted controls></video>
+					<video id="localVideo" class="localVideo" width="200" autoplay muted controls></video><br />
 					<button type="button" id="hangUp" class="btn btn-sm btn-danger" onclick="hangUp()">Hang up</button>
 				</div>
       </div>
