--- a/midi-webrtc.html
+++ b/midi-webrtc.html
@@ -1,10 +1,10 @@
-<!doctype html>
+<!DOCTYPE HTML>
 <html>
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>WebRTC p2p data</title>
-    <script src="js/adapter.js"></script>
+    <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
     <script
       src="https://code.jquery.com/jquery-1.12.4.min.js"
       integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ="
