--- a/midi-webrtc.html
+++ b/midi-webrtc.html
@@ -102,10 +102,10 @@
 						<div class="text-info" id="chatlog" style="height:250px; overflow:auto;">
 						</div>
 					</fieldset>
-					<form class="form-inline" onSubmit="sendMessage();return false;" action="">
+					<form class="form-inline">
 						<div class="form-group">
 							<input type="text" class="form-control" id="messageTextBox" placeholder="Type your message here">
-							<button type="submit" class="btn btn-default" id="sendMessageBtn" class="btn">Send message</button>	  
+							<button type="button" class="btn btn-default" id="sendMessageBtn" class="btn" onclick="sendMessage(); return false">Send message</button>	  
 						</div>
 					</form>
 					
